--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -128,6 +128,9 @@
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                         <state key="normal" title="Remember Me" image="check_normal"/>
                                                         <state key="selected" image="check_selected"/>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="remember-me"/>
+                                                        </userDefinedRuntimeAttributes>
                                                         <connections>
                                                             <action selector="didClickRemember:" destination="3T1-w1-Qsx" eventType="touchUpInside" id="fdE-js-Ote"/>
                                                         </connections>
@@ -139,11 +142,11 @@
                                                             <constraint firstAttribute="height" constant="44" id="tsu-rV-SiF"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="16"/>
-                                                        <state key="normal" title="CONTINUE">
+                                                        <state key="normal" title="Continue">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
                                                         <userDefinedRuntimeAttributes>
-                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="CONTINUE"/>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="continue"/>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                 <real key="value" value="10"/>
                                                             </userDefinedRuntimeAttribute>
