new basic model add missing strings

--- a/DMSDriver/DMSDriver/App/Views/ReasonSkipView/ReasonSkipView.xib
+++ b/DMSDriver/DMSDriver/App/Views/ReasonSkipView/ReasonSkipView.xib
@@ -68,7 +68,7 @@
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                     <real key="value" value="10"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="OK"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="ok"/>
                             </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="onbtnClickOKWithBtn:" destination="-1" eventType="touchUpInside" id="Yi9-L1-rYy"/>
