--- a/DMSDriver/DMSDriver/App/Views/LocationDetailView/LocationDetailView.storyboard
+++ b/DMSDriver/DMSDriver/App/Views/LocationDetailView/LocationDetailView.storyboard
@@ -41,6 +41,9 @@
                                                 <rect key="frame" x="149" y="27" width="116" height="23.5"/>
                                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                 <nil key="highlightedColor"/>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="location-detail"/>
+                                                </userDefinedRuntimeAttributes>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZL-MS-6w0">
                                                 <rect key="frame" x="364" y="13" width="40" height="34"/>
