--- a/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Login.storyboard
@@ -30,13 +30,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="au1-ZQ-VK5">
-                                                <rect key="frame" x="40" y="162.5" width="295" height="342"/>
+                                                <rect key="frame" x="40" y="177.5" width="295" height="312"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_solocate" translatesAutoresizingMaskIntoConstraints="NO" id="5no-5h-GKx">
-                                                        <rect key="frame" x="26.5" y="0.0" width="242" height="39"/>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ashdod_logo" translatesAutoresizingMaskIntoConstraints="NO" id="5no-5h-GKx">
+                                                        <rect key="frame" x="139.5" y="0.0" width="16" height="16"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nk2-zT-JBD">
-                                                        <rect key="frame" x="0.0" y="66" width="295" height="98"/>
+                                                        <rect key="frame" x="0.0" y="43" width="295" height="98"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Let-Fn-BtS">
                                                                 <rect key="frame" x="0.0" y="0.0" width="295" height="44"/>
@@ -124,9 +124,11 @@
                                                         </constraints>
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iZD-KY-mMp">
-                                                        <rect key="frame" x="0.0" y="191" width="295" height="24"/>
+                                                        <rect key="frame" x="0.0" y="168" width="295" height="17"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
-                                                        <state key="normal" title="Remember Me" image="check_normal"/>
+                                                        <state key="normal" title="Remember Me" image="check_normal">
+                                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
                                                         <state key="selected" image="check_selected"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="remember-me"/>
@@ -136,7 +138,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JwE-2P-DeR">
-                                                        <rect key="frame" x="0.0" y="242" width="295" height="44"/>
+                                                        <rect key="frame" x="0.0" y="212" width="295" height="44"/>
                                                         <color key="backgroundColor" red="0.30196078431372547" green="0.80784313725490198" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="44" id="tsu-rV-SiF"/>
@@ -156,10 +158,10 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8HT-Vh-BAx">
-                                                        <rect key="frame" x="90.5" y="313" width="114" height="29"/>
+                                                        <rect key="frame" x="90.5" y="283" width="114" height="29"/>
                                                         <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
                                                         <state key="normal" title="Forgot password?">
-                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </state>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="login_forgot_password"/>
@@ -178,7 +180,7 @@
                                                 </constraints>
                                             </stackView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_bg" translatesAutoresizingMaskIntoConstraints="NO" id="eXu-jL-9OY">
-                                                <rect key="frame" x="0.0" y="508" width="375.00000000000023" height="159"/>
+                                                <rect key="frame" x="0.0" y="508" width="375" height="159"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="eXu-jL-9OY" secondAttribute="height" multiplier="125:53" id="HvX-yk-Kwr"/>
                                                 </constraints>
@@ -226,7 +228,7 @@
                                                 </constraints>
                                             </view>
                                         </subviews>
-                                        <color key="backgroundColor" red="0.2627450980392157" green="0.36078431372549019" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="au1-ZQ-VK5" firstAttribute="centerX" secondItem="99z-PL-E8J" secondAttribute="centerX" id="2nP-d8-l0M"/>
                                             <constraint firstAttribute="trailing" secondItem="eXu-jL-9OY" secondAttribute="trailing" id="4Au-xm-7Od"/>
@@ -275,11 +277,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ashdod_logo" width="120" height="120"/>
         <image name="check_normal" width="24" height="24"/>
         <image name="check_selected" width="24" height="24"/>
         <image name="login_bg" width="929" height="247"/>
         <image name="login_password" width="48" height="48"/>
         <image name="login_username" width="48" height="55"/>
-        <image name="logo_solocate" width="242" height="39"/>
     </resources>
 </document>
