--- a/DMSDriver/DMSDriver/Resources/Storyboards/Loading.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Loading.storyboard
@@ -13,20 +13,20 @@
         <!--Loading View Controller-->
         <scene sceneID="Rg8-o2-Pcb">
             <objects>
-                <viewController storyboardIdentifier="LoadingViewController" id="TFE-SY-7V8" customClass="LoadingViewController" customModule="DMSDriver" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoadingViewController" id="TFE-SY-7V8" customClass="LoadingViewController" customModule="Ashdod_Dev" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wCZ-Ho-P99">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_solocate" translatesAutoresizingMaskIntoConstraints="NO" id="2T1-7L-vyj">
-                                <rect key="frame" x="16" y="36" width="343" height="615"/>
+                                <rect key="frame" x="60" y="36" width="255" height="615"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="ycg-eS-0O5" firstAttribute="trailing" secondItem="2T1-7L-vyj" secondAttribute="trailing" constant="16" id="2fD-7l-PF4"/>
+                            <constraint firstItem="ycg-eS-0O5" firstAttribute="trailing" secondItem="2T1-7L-vyj" secondAttribute="trailing" constant="60" id="2fD-7l-PF4"/>
                             <constraint firstItem="2T1-7L-vyj" firstAttribute="top" secondItem="ycg-eS-0O5" secondAttribute="top" constant="16" id="Dsp-LA-9Z8"/>
-                            <constraint firstItem="2T1-7L-vyj" firstAttribute="leading" secondItem="ycg-eS-0O5" secondAttribute="leading" constant="16" id="E5g-W3-5cI"/>
+                            <constraint firstItem="2T1-7L-vyj" firstAttribute="leading" secondItem="ycg-eS-0O5" secondAttribute="leading" constant="60" id="E5g-W3-5cI"/>
                             <constraint firstItem="ycg-eS-0O5" firstAttribute="bottom" secondItem="2T1-7L-vyj" secondAttribute="bottom" constant="16" id="Q0q-wQ-eJS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ycg-eS-0O5"/>
